--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,5 +1,5 @@
 <section class="page-header">
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
-  <h3 class="main-content"><a href="/aow/">AoW</a></h3>
+  <h3 class="project-tagline"><a href="/aow/">AoW</a></h3>
 </section>
