--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 ---
-<h1>Athletes of the Week</h1>
-
-{% for post in site.categories[page.category] %}
-  <h2><a href=""></a></h2>
-  <p></p>
-{% endfor %}
+<div class="blog list">
+    <h1>Filed Under {{ page.tag }}</h1>
+    {% for post in site.categories[page.tag] %}
+    {% endfor %}
+</div>
