--- a/css/cayman.css
+++ b/css/cayman.css
@@ -190,3 +190,6 @@ a:hover { text-decoration: underline; }
 .site-footer-owner { display: block; font-weight: bold; }
 
 .site-footer-credits { color: #819198; }
+
+.navbar > a, a:hover, a:active, a:visited { color: white; }
+.navbar > a:hover {opacity: .75;}
