--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,8 +1,27 @@
 ---
 layout: default
 ---
-<div class="blog list">
-    <h1>Filed Under {{ page.tag }}</h1>
-    {% for post in site.categories[page.tag] %}
-    {% endfor %}
+{% for post in site.categories[page.category] %}
+<div class="post-preview">
+    <a href="{{ post.url | prepend: site.baseurl }}">
+        <h2 class="post-title">
+            {{ post.title }}
+        </h2>
+        {% if post.subtitle %}
+        <h3 class="post-subtitle">
+            {{ post.subtitle }}
+        </h3>
+        {% endif %}
+    </a>
+    <p class="post-meta">
+      Posted by
+      {% if post.author %}
+        {{ post.author }}
+      {% else %}
+        {{ site.title }}
+      {% endif %}
+      on {{ post.date | date: "%B %-d, %Y" }}
+    </p>
 </div>
+<hr>
+{% endfor %}
