--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,9 +1,7 @@
 <section class="page-header">
-  <h1 class="project-name">{{ site.title }}</h1>
+  <h1 class="project-name"><a class="whitelink" href="{{ site.url }}">{{ site.title }}</a></h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
-  <div class="navbar">
-      {% for category in site.categories %}
-        <a href="/category/{{ category[0] }}/" style="text-decoration: none;">{% if category[0] == 'aow' %}{{ category[0] | upcase}}{% else %}{{ category[0] | capitalize }}{% endif %}</a>
-      {% endfor %}
-  </div>
+    {% for category in site.categories %}
+      <a class="whitelink" href="/category/{{ category[0] }}/" style="text-decoration: none;">{% if category[0] == 'aow' %}{{ category[0] | upcase}}{% else %}{{ category[0] | capitalize }}{% endif %}</a>
+    {% endfor %}
 </section>
