--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,4 +1,27 @@
 <section class="page-header">
+    
+<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="{{ site.url }}">Hunter Athletics</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{site.url}}/category/aow">Athletes of the Week<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{{site.url}}/category/sp">Senior Profiles<span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </div>
+</nav>    
+    
+    
+    
+    
+
   <h1 class="project-name"><a class="whitelink" href="{{ site.url }}">{{ site.title }}</a></h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
     {% for category in site.categories %}
