Added back button to AoW pages

--- a/_layouts/aow.html
+++ b/_layouts/aow.html
@@ -4,4 +4,7 @@ layout: default
 <h2>{{ page.title }}</h2>
 <p class="meta">Athlete of Week: {{ page.date | date_to_string }}</p>
 
+
+<a role="link" class="btn btn-secondary btn-sm" href="{{site.url}}/category/aow">back to AoWs</a>
+
 {{ content }}
