--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/8be927ac64.css">
 </head>
