--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -2,7 +2,7 @@
 
     <nav class="navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand font-weight-bold text-warning mr-4 mr-4" href="{{ site.url }}">Hunter Athletics</a>
+            <a class="navbar-brand font-weight-bold text-warning mr-4 mr-4" href="{{ site.url }}">Hunter Athletics <i class="fa fa-trophy"></i></a>
             <ul class="nav navbar-nav navbar-right">
               <li class="nav-item active">
                 <a class="nav-link text-warning ml-3" href="{{site.url}}/category/aow">Athletes of the Week<span class="sr-only">(current)</span></a>
@@ -14,5 +14,5 @@
         </div>
     </nav>
 
-    
+
 </section>
