--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,17 +1,45 @@
 <section class="page-header">
 
-    <nav class="navbar navbar-expand-md navbar-light">
-        <div class="container-fluid">
-            <a class="navbar-brand font-weight-bold text-warning mr-4 mr-4" href="{{ site.url }}">Hunter Athletics <i class="fa fa-trophy"></i></a>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="nav-item active">
-                <a class="nav-link text-warning ml-3" href="{{site.url}}/category/aow">Athletes of the Week<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item active">
-                  <a class="nav-link text-warning ml-3" href="{{site.url}}/category/sp">Senior Profiles<span class="sr-only">(current)</span></a>
-              </li>
-            </ul>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-image: linear-gradient(120deg, #9200db, #8300ef);">
+      <div class="container">
+
+        <div class="navbar-header mb-3 mt-3">
+          <a class="navbar-brand font-weight-bold text-warning mr-4 mr-4" href="{{ site.url }}">Hunter Athletics <i class="fa fa-trophy"></i></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=#main-nav-collapse>
+            <span class="navbar-toggler-icon"></span>
+          </button>
         </div>
+
+        <div class="navbar-right">
+          <div class="collapse navbar-collapse" id="main-nav-collapse">
+            <div class="btn-group mb-3 mt-3">
+              <a href="{{site.url}}/category/aow" class="btn btn-warning">Athletes of the Week</a>
+              <div class="btn-group" role="group">
+                 <button id="btnGroupDrop1" type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
+                   Profiles
+                 </button>
+                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                   <div class="btn-group-vertical">
+                     <a href="{{site.url}}/category/sp" class="btn btn-warning">Senior Profiles</a>
+                     <a href="{{site.url}}/category/aow" class="btn btn-warning">Team Profiles</a>
+                   </div>
+                 </div>
+               </div>
+            </div>
+          </div>
+        </div>
+
+          <!-- <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item active">
+              <a class="nav-link text-warning ml-3" href="{{site.url}}/category/aow">Athletes of the Week<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link text-warning ml-3" href="{{site.url}}/category/sp">Senior Profiles<span class="sr-only">(current)</span></a>
+            </li>
+          </ul> -->
+
+        </div>
+      </div>
     </nav>
 
 
