--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ site.locale }}">
-  
+
   {% include head.html %}
 
   <body>
     {% include page-header.html %}
 
-    <section class="main-content">
-      
+    <section class="main-content mt-5">
+
       {{ content }}
 
       {% include page-footer.html %}
