added every single recap

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -21,7 +21,7 @@
                  <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
                    <div class="btn-group-vertical">
                      <a href="{{site.url}}/category/sp" class="btn btn-warning">Senior Profiles</a>
-                     <a href="{{site.url}}/category/aow" class="btn btn-warning">Team Profiles</a>
+                     <a href="{{site.url}}/category/recap" class="btn btn-warning">Team Profiles</a>
                    </div>
                  </div>
                </div>
