Added a Weekly Update Page

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -13,6 +13,7 @@
         <div class="navbar-right">
           <div class="collapse navbar-collapse" id="main-nav-collapse">
             <div class="btn-group mb-3 mt-3">
+              <a href="{{site.url}}/wu.html" class="btn btn-warning">Weekly Updates</a>
               <a href="{{site.url}}/category/aow" class="btn btn-warning">Athletes of the Week</a>
               <div class="btn-group" role="group">
                  <button id="btnGroupDrop1" type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
