header/footer changes

--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-  <span class="site-footer-owner"><a href="{{ site.url }}">{{ site.title }}</a> is maintained by <a href="{{ site.author.url }}">{{ site.author.name }}</a>.</span>
+  <span class="site-footer-owner"><a href="{{ site.url }}">{{ site.title }}</a> was coded by <a href="{{ site.author.url }}">{{ site.author.name }}</a>.</span>
   <script src="{{'/node_modules/jquery/dist/jquery.min.js' | prepend: site.baseurl}}"></script>
   <script src="{{'/node_modules/popper.js/dist/popper.min.js | prepend: site.baseurl}}"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.bundle.min.js" integrity="sha384-VspmFJ2uqRrKr3en+IG0cIq1Cl/v/PHneDw6SQZYgrcr8ZZmZoQ3zhuGfMnSR/F2" crossorigin="anonymous"></script>
