--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -12,15 +12,15 @@
 
         <div class="navbar-right">
           <div class="collapse navbar-collapse" id="main-nav-collapse">
-            <div class="btn-group mb-3 mt-3">
+            <div class="btn-group btn-group-sm mb-3 mt-3">
               <a href="{{site.url}}/wu.html" class="btn btn-warning">Weekly Update</a>
               <a href="{{site.url}}/category/aow" class="btn btn-warning">Athletes of the Week</a>
-              <div class="btn-group" role="group">
+              <div class="btn-group btn-group-sm" role="group">
                  <button id="btnGroupDrop1" type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
                    Profiles
                  </button>
                  <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                   <div class="btn-group-vertical">
+                   <div class="btn-group-vertical btn-group-sm">
                      <a href="{{site.url}}/category/sp" class="btn btn-warning">Senior Profiles</a>
                      <a href="{{site.url}}/category/recap" class="btn btn-warning">Team Profiles</a>
                    </div>
