--- a/css/cayman.css
+++ b/css/cayman.css
@@ -232,3 +232,30 @@ background: linear-gradient(to top, #D4D3DD, #EFEFBB); /* W3C, IE 10+/ Edge, Fir
 	width: 100%;
 	height: 100%;
 }
+
+.grow {
+  transition: all .1s ease-in-out;
+}
+
+.grow:hover{
+  transform: scale(1.1);
+}
+
+@keyframes pulse {
+	0% { transform: scale(1); }
+	30% { transform: scale(1); }
+	40% { transform: scale(1.08); }
+	50% { transform: scale(1); }
+	60% { transform: scale(1); }
+	70% { transform: scale(1.05); }
+	80% { transform: scale(1); }
+	100% { transform: scale(1); }
+}
+
+.pulse {
+	animation-name: pulse;
+	animation-duration: 5000ms;
+	transform-origin:70% 70%;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
