hopefully fixed backlink

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -4,7 +4,7 @@
       <div class="container">
 
         <div class="navbar-header mb-3 mt-3">
-          <a class="navbar-brand font-weight-bold text-warning mr-4 mr-4" href="{{ site.url }}"><larger>Hunter Athletics </larger><i class="fa fa-trophy"></i></a>
+          <a class="navbar-brand font-weight-bold text-warning mr-4 mr-4" href="{{ site.url }}/"><larger>Hunter Athletics </larger><i class="fa fa-trophy"></i></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=#main-nav-collapse>
             <span class="navbar-toggler-icon"></span>
           </button>
