wrap nav buttons

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -12,11 +12,13 @@
 
         <div class="navbar-right">
           <div class="collapse navbar-collapse" id="main-nav-collapse">
-            <div class="btn-group btn-group-sm mb-3 mt-3">
-              <a href="{{site.url}}/wu.html" class="btn btn-warning">Weekly Update</a>
-              <a href="{{site.url}}/category/aow" class="btn btn-warning">Athletes of the Week</a>
-              <a href="{{site.url}}/category/sp" class="btn btn-warning">Senior Profiles</a>
-              <a href="{{site.url}}/category/recap" class="btn btn-warning">Team Profiles</a>
+            <div class="container-fluid">
+              <div class="btn-group btn-group-sm mb-3 mt-3 flex-wrap">
+                <a href="{{site.url}}/wu.html" class="btn btn-warning">Weekly Update</a>
+                <a href="{{site.url}}/category/aow" class="btn btn-warning">Athletes of the Week</a>
+                <a href="{{site.url}}/category/sp" class="btn btn-warning">Senior Profiles</a>
+                <a href="{{site.url}}/category/recap" class="btn btn-warning">Team Profiles</a>
+              </div>
             </div>
           </div>
         </div>
