Fixed wrapping on navbar

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,6 +1,6 @@
 <section class="page-header">
 
-    <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-image: linear-gradient(120deg, #9200db, #8300ef);">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-image: linear-gradient(120deg, #9200db, #8300ef);">
       <div class="container">
 
         <div class="navbar-header mb-3 mt-3">
